# InMind_Project

docker/: README.md  build_image.sh  dockerfile  install_rosdeps.sh  install_third_parties.sh  install_tools.sh  start_container.sh
src/Universal_Robots_ROS2_Description/: package.xml
src/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
src/Universal_Robots_ROS2_Description/urdf/: ur.ros2_control.xacro
src/academy_robot_common/academy_robot_common/: CMakeLists.txt  package.xml
src/academy_robot_common/academy_robot_common/academy_robot_common/launch/: add_launch_args.py
src/academy_robot_description/: CMakeLists.txt  package.xml
src/academy_robot_description/launch/: academy_robot_description.launch.py
src/academy_robot_description/meshes/bases/academy_robot/: academy_robot_top_cover.stl
src/academy_robot_description/robots/academy_robot/: academy_robot.urdf.xacro  academy_robot_plus.urdf.xacro
src/academy_robot_description/simulators/gazebo_classic/academy_robot/: academy_robot_control.urdf.xacro  academy_robot_controller_params.yaml
src/academy_robot_description/simulators/gazebo_ignition/academy_robot/: academy_robot_control.urdf.xacro  academy_robot_controller_params.yaml
src/academy_robot_description/urdf/: academy_robot_base.urdf.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur_gripper.urdf.xacro
src/academy_robot_description/urdf/base_hw/: academy_robot.ros2_control.urdf
src/academy_robot_description/urdf/bases/academy_robot/: academy_robot_base.urdf.xacro
src/academy_robot_description/urdf/bodies/academy_robot/: academy_robot_body.urdf.xacro  academy_robot_plus_body.urdf.xacro
src/academy_robot_description/urdf/structures/ewellix/: all_ewellix_lift.urdf.xacro  ewellix_lift_700mm.urdf.xacro  ewellix_lift_900mm.urdf.xacro
src/academy_robot_description/urdf/wheels/caster_wheel/: rbtheron_caster.urdf.xacro
src/academy_robot_description/urdf/wheels/mecanum_wheel/: academy_robot_mecanum_wheel.urdf.xacro
src/academy_robot_description/urdf/wheels/rubber_wheel/: rubber_wheel.urdf.xacro  rubber_wheel_150.urdf.xacro
src/academy_robot_description/urdf/wheels/steering_wheel/: steering_wheel.urdf.xacro
src/academy_robot_interfaces/academy_robot_battery_msgs/: CMakeLists.txt  package.xml
src/academy_robot_interfaces/academy_robot_common_msgs/: CMakeLists.txt  package.xml
src/academy_robot_interfaces/academy_robot_interfaces/: CMakeLists.txt  package.xml
src/academy_robot_interfaces/academy_robot_interfaces/action/: PickPlace.action
src/academy_robot_interfaces/academy_robot_interfaces/srv/: DetectObject.srv
src/academy_robot_interfaces/academy_robot_io_msgs/: CMakeLists.txt  package.xml
src/academy_robot_interfaces/academy_robot_io_msgs/msg/: RegisterArray.msg
src/academy_robot_interfaces/academy_robot_io_msgs/srv/: GetRegisters.srv  SetAnalogOutput.srv  SetAnalogOutputArray.srv  SetDigitalOutput.srv  SetDigitalOutputArray.srv  SetRegisters.srv
src/academy_robot_interfaces/academy_robot_navigation_msgs/: CMakeLists.txt  package.xml
src/academy_robot_interfaces/academy_robot_navigation_msgs/action/: Dock.action  Move.action
src/academy_robot_interfaces/academy_robot_perception_msgs/: CMakeLists.txt  package.xml
src/academy_robot_interfaces/academy_robot_safety_msgs/: CMakeLists.txt  package.xml
src/academy_robot_interfaces/academy_robot_supervisor_msgs/: CMakeLists.txt  package.xml
src/academy_robot_interfaces/academy_robot_supervisor_msgs/srv/: GetModuleList.srv  GetStackList.srv  GetStackLogs.srv  GetStackStatus.srv  StopModule.srv
src/academy_robot_interfaces/robotnik_controllers_msgs/: CMakeLists.txt  package.xml
src/academy_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/academy_robot_pick_place/: CMakeLists.txt  README.md  package.xml
src/academy_robot_pick_place/launch/: pick_place.launch.py
src/academy_robot_pick_place/src/: object_detector_node.cpp  pick_place_client_node.cpp  pick_place_server.cpp
src/academy_robot_sensors/academy_robot_sensors/: CMakeLists.txt  package.xml
src/academy_robot_sensors/academy_robot_sensors/urdf/: all_sensors.urdf.xacro
src/academy_robot_sensors/academy_robot_sensors/urdf/2d_lidar/: hokuyo_urg04lx.urdf.xacro  hokuyo_ust10lx.urdf.xacro  hokuyo_ust20lx.urdf.xacro  hokuyo_utm30lx.urdf.xacro  sick_microscan3.urdf.xacro  sick_nanoscan3.urdf.xacro  sick_outdoorscan3.urdf.xacro  sick_s300.urdf.xacro  sick_s3000.urdf.xacro  sick_tim551.urdf.xacro  sick_tim571.urdf.xacro
src/academy_robot_sensors/academy_robot_sensors/urdf/3d_lidar/: livox_mid_360.urdf.xacro  ouster.urdf.xacro  robosense_bpearl.urdf.xacro  robosense_helios_16p.urdf.xacro  sick_multiscan_100.urdf.xacro  velodyne_vlp16.urdf.xacro
src/academy_robot_sensors/academy_robot_sensors/urdf/camera/: axis_m5013.urdf.xacro  axis_m5074.urdf.xacro  axis_m5525.urdf.xacro  axis_m5526.urdf.xacro
src/academy_robot_sensors/academy_robot_sensors/urdf/deprecated/: asus_xtion_pro.urdf.xacro  axis.urdf.xacro  axis_q8641.urdf.xacro  benewake_ce30.urdf.xacro  benewake_ce30d.urdf.xacro  embedded_s.urdf.xacro  fotonic_e.urdf.xacro  hokuyo3d.urdf.xacro  intel_d435.urdf.xacro  intel_r430.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  lidar_mast.urdf.xacro  pantilt.urdf.xacro  rplidar.urdf.xacro  rplidar_a2.urdf.xacro  rslidar.urdf.xacro  rslidar_mems.urdf.xacro  rubedos_viper.urdf.xacro  teraranger_tr_duo.urdf.xacro  ueye_cp_gige.urdf.xacro  ydlidar_4f.urdf.xacro  yujin_yrl.urdf.xacro  zed.urdf.xacro  zed2.urdf.xacro
src/academy_robot_sensors/academy_robot_sensors/urdf/depth/: azure_kinect.urdf.xacro  depth_camera_plugin.urdf.xacro  intel_realsense_d435.urdf.xacro  intel_realsense_d435i.urdf.xacro  orbbec_astra.urdf.xacro  stereolabs_generic.urdf.xacro  stereolabs_zed2i.urdf.xacro
src/academy_robot_sensors/academy_robot_sensors/urdf/gps/: gps.urdf.xacro  gps_with_mast.urdf.xacro  ublox.urdf.xacro  ublox_with_mast.urdf.xacro
src/academy_robot_sensors/academy_robot_sensors/urdf/imu/: myahrs.urdf.xacro  pixhawk.urdf.xacro  vectornav.urdf.xacro
(+37 files in other folders)
