<?xml version="1.0"?>
<package format="3">
  <name>academy_robot_pick_place</name>
  <version>0.0.0</version>
  <description>Perception-driven pick and place nodes for the academy robot assignment.</description>

  <maintainer email="yasmine@todo.todo">Yasmine</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>academy_robot_interfaces</depend>
  <depend>moveit_task_constructor_core</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
