<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>academy_robot_common</name>
    <version>1.1.0</version>
    <description> Academy Robot common software for ROS2 packages. </description>
    <maintainer email="jad.elhajj@inmind.ai">Jad El Hajj</maintainer>
    <license>Apache-2.0</license>
    <depend>launch</depend>
    <depend>launch_ros</depend>
    <depend>osrf_pycommon</depend>
    <depend>rclpy</depend>
    <depend>python3-yaml</depend>
    <build_depend>ament_cmake_python</build_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>