<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>academy_robot_safety_msgs</name>
  <version>1.0.0</version>
  <description>Message definition for the Academy Robot Safety System</description>
  <maintainer email="jad.elhajj@inmind.ai">Jad El Hajj</maintainer>
  <license>Apache-2.0</license>
  <author email="jad.elhajj@inmind.ai">Jad El Hajj</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>