<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>academy_robot_sensors</name>
  <version>2.0.0</version>
  <description>Academy Robot standard sensors description. URDF and meshses.</description>
  <maintainer email="jad.elhajj@inmind.ai">Jad El Hajj</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>xacro</test_depend>
  <test_depend>urdfdom</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>